CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
PROJECT(laserscan_ros_2_rsb)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system program_options)

SET(ENV{ROS_LANG_DISABLE} "genjava")

FIND_PACKAGE(catkin COMPONENTS roscpp std_msgs sensor_msgs image_transport cv_bridge)

FIND_PACKAGE(RSC 0.12 REQUIRED)

FIND_PACKAGE(RSB 0.12 REQUIRED)

FIND_PACKAGE(RST 0.12 REQUIRED sandbox)

FIND_PACKAGE(rst-converters 0.12 REQUIRED)

ADD_DEFINITIONS(${RST_CFLAGS} ${RSTSANDBOX_CFLAGS} -DBOOST_SIGNALS_NO_DEPRECATION_WARNING)

SET(ROS_BUILD_TYPE RELEASE)

SET(CMAKE_BUILD_TYPE RELEASE)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

CATKIN_PACKAGE(
  INCLUDE_DIRS include
  CATKIN_DEPENDS message_runtime
)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${RSB_INCLUDE_DIRS} ${RSC_INCLUDE_DIRS} ${RST_INCLUDE_DIRS} ${RST_CONVERTERS_INCLUDE_DIRS} include)

FILE(GLOB CLF_HEADER_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} include/*.hpp)

ADD_EXECUTABLE(laserscan_ros_2_rsb
	       src/main.cpp
               src/ros_source.cpp
               ${CLF_HEADER_LIST}
               ${INCLUDE_DIRS}

)

TARGET_LINK_LIBRARIES(laserscan_ros_2_rsb ${catkin_LIBRARIES} ${RSB_LIBRARIES} ${RST_CONVERTERS_LIBRARIES})

SET_PROPERTY(TARGET laserscan_ros_2_rsb PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
SET_TARGET_PROPERTIES(laserscan_ros_2_rsb PROPERTIES COMPILE_FLAGS -DCMAKE_INSTALL_PREFIX="${CMAKE_INSTALL_PREFIX}")

INSTALL(TARGETS laserscan_ros_2_rsb RUNTIME DESTINATION bin)
